--- a/views/index.html
+++ b/views/index.html
@@ -1,1 +1,7 @@
-<h1>Hello thar!</h1>
+<!DOCTYPE html>
+<html>
+  <body>
+    <div id="root"></div>
+    <script src="/assets/bundle.js"></script>
+  </body>
+</html>
