Pull in the old website's styling/HTML

--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <title>About | Colin Jackson</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+
+    <!--<link href="/assets/builds/index.css" rel="stylesheet">-->
   </head>
   <body>
     <div id="root"></div>
-    <script src="/assets/bundle.js"></script>
+    <script src="/assets/builds/index.js"></script>
   </body>
 </html>
