--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -1,6 +1,6 @@
 @import "~normalize.css";
 @import "./_reset.scss";
-@import url(http://fonts.googleapis.com/css?family=Josefin+Slab:700|Raleway);
+@import url(https://fonts.googleapis.com/css?family=Lato:700,900);
 
 /* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -21,9 +21,10 @@ html {
 
 body {
   background: $azure;
-  font-family: 'Raleway', sans-serif;
-  font-size: 1rem;
-  line-height: 1.5rem;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.25rem;
+  font-weight: 700;
+  line-height: 1.75rem;
   color: $purple;
 }
 
@@ -64,54 +65,15 @@ HEADER
 header {
   background: $purple;
   width: 100%;
-}
-
-.header-content {
-  min-height: 50vh;
-}
-
-.header-content > .context {
-  > small {
-    display: inline-block;
-    font-size: 1.5rem;
-    margin-top: 0.5rem;
-    font-family: 'Josefin Slab', serif;
-    font-weight: bold;
-    text-align: center;
-    color: $magenta;
-  }
-
-  > :first-child {
-    float: left;
-    margin-left: 0.5rem;
-  }
-
-  > :last-child {
-    float: right;
-    margin-right: 0.5rem;
-  }
-}
-
-.header-content > p {
-  width: 95%;
-  padding: 7rem 0;
-  margin: 0 auto;
-  font-size: 1.5rem;
-  line-height: 2.25rem;
-  text-align: center;
-  color: $azure;
-}
-
-header {
-  padding-bottom: calc(4rem + 4px);
+  padding-bottom: calc(3rem + 2px);
 }
 
 header > .navigation {
   position: relative;
   z-index: 2;
   border: solid $azure;
-  border-width: 2px 0;
-  margin-bottom: calc(-4rem - 4px);
+  border-width: 0 0 2px 0;
+  margin-bottom: calc(-3rem - 2px);
 
   > li {
     float: left;
@@ -142,8 +104,7 @@ header > .navigation.fixed {
 
 header > .navigation > li > a {
   display: block;
-  padding: 1.25rem 0;
-  font-weight: bold;
+  padding: 0.75rem 0;
   letter-spacing: 0.2rem;
   color: $azure;
   text-align: center;
@@ -197,8 +158,9 @@ main {
 }
 
 main > .social-media {
-  margin: 1.25rem;
-  height: 5.5rem;
+  height: calc(4.5rem - 2px);
+  border: solid $azure;
+  border-width: 0 2px 2px 2px;
 }
 
 main > .social-media > li {
@@ -213,7 +175,7 @@ main > .social-media > li > a {
   box-sizing: border-box;
   height: 100%;
   border-radius: 3px;
-  padding: 1em 0;
+  padding: 0.5em 0;
 }
 
 main > .social-media > li > a > img {
@@ -226,19 +188,6 @@ main > .social-media > li > a:hover {
   background: $magenta;
 }
 
-main > h1 {
-  display: block;
-  padding: 1rem 0;
-  margin-bottom: 2rem;
-  letter-spacing: 0.2rem;
-  font-family: 'Josefin Slab', serif;
-  font-size: 2rem;
-  line-height: 2rem;
-  text-align: center;
-  background: $purple;
-  color: $magenta;
-}
-
 
 /* BREAKPOINT: 914px */
 @media (min-width: 914px) {
@@ -248,7 +197,7 @@ main > h1 {
 
   main > .social-media {
     position: absolute;
-    top: 2.5rem;
+    top: 0.5rem;
     right: 20px;
     width: 25%;
     height: 3rem;
@@ -263,7 +212,7 @@ main > h1 {
   }
 
   main > h1 {
-    margin-top: 4rem;
+    margin-top: 0;
   }
 }
 
@@ -322,8 +271,6 @@ main > .projects-list > li {
 
 main > .projects-list > li > h2 {
   display: block;
-  font-family: 'Josefin Slab', serif;
-  font-weight: bold;
   font-size: 1.5rem;
   padding: 0.3rem 1rem;
   margin-bottom: 0.3rem;
@@ -398,7 +345,6 @@ footer {
 
 footer > small {
   display: block;
-  font-family: 'Josefin Slab', serif;
   text-align: center;
   color: $magenta;
   font-size: 0.66rem;
@@ -409,6 +355,7 @@ footer > small {
 
 footer > small.production-message {
   font-size: 0.75rem;
+  font-weight: 900;
   margin-top: 0;
-  letter-spacing: 0.2rem;
+  letter-spacing: 0.33rem;
 }
