--- a/views/projects.html
+++ b/views/projects.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About | Colin Jackson</title>
+    <title>Portfolio | Colin Jackson</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
     <div id="root"></div>
-    <script src="/assets/builds/index.js"></script>
+    <script src="/assets/builds/projects.js"></script>
   </body>
 </html>
