--- a/assets/stylesheets/components/header.scss
+++ b/assets/stylesheets/components/header.scss
@@ -49,8 +49,6 @@ header > .navigation > li > a {
 }
 
 
-/* BREAKPOINT: 583px */
-
 /* BREAKPOINT: 914px */
 
 @media (min-width: 914px) {
@@ -63,5 +61,36 @@ header > .navigation > li > a {
   }
 }
 
+
+header > .social-media {
+  height: calc(4.5rem - 2px);
+  border: solid $azure;
+  border-width: 0 2px 2px 2px;
+}
+
+header > .social-media > li {
+  float: left;
+  box-sizing: border-box;
+  height: 100%;
+  width: 33.33%;
+}
+
+header > .social-media > li > a {
+  display: block;
+  box-sizing: border-box;
+  height: 100%;
+  border-radius: 3px;
+  padding: 0.5em 0;
+}
+
+header > .social-media > li > a > img {
+  height: 100%;
+  width: auto;
+  margin: 0 auto;
+}
+
+header > .social-media > li > a:hover {
+  background: $magenta;
+}
 
 
