--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -1,7 +1,10 @@
-@import "~normalize.css";
+@import '~normalize.css';
 @import "~variables.scss";
-@import "reset.scss";
+
+@import "_reset.scss";
+
 @import url(https://fonts.googleapis.com/css?family=Lato:700,900);
+
 
 /* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -31,18 +34,18 @@ body {
 }
 
 
-/* BREAKPOINT: 583px */
+/* BREAKPOINT: screenmd */
 
-@media (min-width: 583px) {
+@media (min-width: $screenmd) {
   html {
     font-size: 125%;
   }
 }
 
 
-/* BREAKPOINT: 914px */
+/* BREAKPOINT: screenlg */
 
-@media (min-width: 914px) {
+@media (min-width: $screenlg) {
   html {
     font-size: 150%;
   }
@@ -90,9 +93,9 @@ main > .biography > .my-photo {
 }
 
 
-/* BREAKPOINT: 914px */
+/* BREAKPOINT: screenlg */
 
-@media (min-width: 914px) {
+@media (min-width: $screenlg) {
   main > .biography {
     margin: 0 3rem;
   }
@@ -158,9 +161,9 @@ main > .projects-list > li > .project-content > p {
 }
 
 
-/* BREAKPOINT: 914px */
+/* BREAKPOINT: screenlg */
 
-@media (min-width: 914px) {
+@media (min-width: $screenlg) {
   main > .projects-list {
     box-sizing: border-box;
   }
@@ -173,37 +176,4 @@ main > .projects-list > li > .project-content > p {
   main > .projects-list > li:nth-child(2n + 1) {
     margin-right: 5%;
   }
-}
-
-
-
-/* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-FOOTER
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */
-
-footer {
-  width: 100%;
-  padding: 5rem 0;
-  background: $purple;
-}
-
-footer > small {
-  display: block;
-  text-align: center;
-  color: $magenta;
-  font-size: 0.66rem;
-  margin-top: 1rem;
-  line-height: 1rem;
-  letter-spacing: 0;
-}
-
-footer > small.production-message {
-  font-size: 0.875rem;
-  font-weight: 900;
-  margin-top: 0;
-  letter-spacing: 0.33rem;
 }
