--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -1,86 +1,12 @@
-@import '~normalize.css';
-@import "~variables.scss";
+@import '~variables.scss';
 
-@import "_reset.scss";
-
-@import url(https://fonts.googleapis.com/css?family=Lato:700,900);
-
-
-/* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-DEFAULTS
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */
-
-html {
-  font-size: 100%;
-}
-
-body {
-  background: $azure;
-  font-family: 'Lato', sans-serif;
-  font-size: 1.25rem;
-  font-weight: 700;
-  line-height: 1.75rem;
-  color: $purple;
-}
-
-.group:after {
-  display: block;
-  content: "";
-  clear: both;
-}
-
-
-/* BREAKPOINT: screenmd */
-
-@media (min-width: $screenmd) {
-  html {
-    font-size: 125%;
-  }
-}
-
-
-/* BREAKPOINT: screenlg */
-
-@media (min-width: $screenlg) {
-  html {
-    font-size: 150%;
-  }
-}
-
-
-
-
-/* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-MAIN
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */
-
-main {
-  padding-top: 0.1px;
-}
-
-
-/* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-ABOUT
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */
 
 main > .biography {
-  margin: 2rem;
+  margin: 0.75rem 2rem 1.25rem 2rem;;
 }
 
 main > .biography > p {
-  margin-bottom: 2rem;
+  margin-bottom: 1.25rem;
 }
 
 main > .biography > .my-photo {
@@ -98,82 +24,5 @@ main > .biography > .my-photo {
 @media (min-width: $screenlg) {
   main > .biography {
     margin: 0 3rem;
-  }
-}
-
-
-/* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-PORTFOLIO
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */
-
-main > .projects-list {
-  margin: 2rem;
-}
-
-main > .projects-list > li {
-  margin-bottom: 2rem;
-}
-
-main > .projects-list > li > h2 {
-  display: block;
-  font-size: 1.5rem;
-  font-weight: 900;
-  padding: 0.3rem 1rem;
-  margin-bottom: 0.3rem;
-  border-bottom: 2px solid $purple;
-}
-
-main > .projects-list > li > h2 > a {
-  display: block;
-  float: right;
-  position: relative;
-  top: -0.3rem;
-  margin: 0 0.2rem;
-  padding: 0.2rem 0.5rem;
-  font-size: 1rem;
-  color: $azure;
-  background: $purple;
-  border-radius: 3px;
-}
-
-main > .projects-list > li > h2 > a:hover {
-  background: $magenta;
-}
-
-main > .projects-list > li > .project-content {
-  width: 80%;
-  margin: 1rem auto;
-}
-
-main > .projects-list > li > .project-content > img {
-  margin: 1rem 0;
-  border: 2px solid $magenta;
-  border-radius: 3px;
-}
-
-main > .projects-list > li > .project-content > p {
-  font-size: 1rem;
-  text-align: center;
-}
-
-
-/* BREAKPOINT: screenlg */
-
-@media (min-width: $screenlg) {
-  main > .projects-list {
-    box-sizing: border-box;
-  }
-
-  main > .projects-list > li {
-    float: left;
-    width: 47.5%;
-  }
-
-  main > .projects-list > li:nth-child(2n + 1) {
-    margin-right: 5%;
   }
 }
