--- a/assets/stylesheets/components/header.scss
+++ b/assets/stylesheets/components/header.scss
@@ -3,7 +3,6 @@
 
 header.component {
   width: 100%;
-  padding-bottom: calc(3rem + 2px);
 }
 
 
@@ -12,7 +11,6 @@ header.component > .navigation {
   z-index: 2;
   border: solid $azure;
   border-width: 0 0 2px 0;
-  margin-bottom: calc(-3rem - 2px);
 
   > li {
     float: left;
@@ -51,7 +49,7 @@ header.component > .navigation > li > a {
 
 
 header.component > .social-media {
-  height: calc(4.5rem - 2px);
+  height: 3.5rem;
   border: solid $azure;
   border-width: 0 2px 2px 2px;
 }
