--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/assets/builds/app.js"></script>
+    <script src="/assets/_builds/app.js"></script>
   </body>
 </html>
