Style and add links to 'index' page

--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -2,7 +2,7 @@
 @import '~variables.scss';
 @import "_reset.scss";
 
-@import url(https://fonts.googleapis.com/css?family=Lato:700,900);
+@import url(https://fonts.googleapis.com/css?family=Lato:700,900italic);
 
 
 html {
